<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/txtEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/email_placeholder"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFavouriteSongs"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_favourite_songs"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailAddress"
        app:layout_constraintVertical_bias="0.119" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFavouriteAlbums"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_favourite_albums"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFavouriteSongs"
        app:layout_constraintVertical_bias="0.067" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFavouriteArtists"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_favourite_artists"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFavouriteAlbums"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/btnLogoutListener"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/border"
        android:text="@string/button_logout"
        android:textAlignment="center"
        app:icon="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFavouriteArtists"
        app:layout_constraintVertical_bias="0.286" />

</androidx.constraintlayout.widget.ConstraintLayout>