<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="55dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/categoryItemView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/image_placeholder" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtArtistItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/artist_item_placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/txtArtistItemYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_time_placeholder"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txtArtistItemTitle"
        app:layout_constraintStart_toStartOf="@+id/txtArtistItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtArtistItemTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>