<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.home.item.AlbumFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageAlbumWrapper"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="55dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259">
        <ImageView
            android:id="@+id/imageAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_placeholder"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btnLikeAlbum"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/ic_favourite_unfilled"
        app:layout_constraintBottom_toBottomOf="@+id/txtAlbumHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAlbumHeading"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAlbumLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/length_placeholder"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtAlbumTitle"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/txtAlbumTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtAlbumTitle" />

    <TextView
        android:id="@+id/txtAlbumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_name_placeholder"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageAlbumWrapper"
        app:layout_constraintStart_toStartOf="@+id/imageAlbumWrapper"
        app:layout_constraintTop_toBottomOf="@+id/imageAlbumWrapper"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/txtAlbumHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name_placeholder"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/btnBackAlbum"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="42dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songListAlbumRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlbumLength"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>