<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.home.item.AlbumFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageArtistWrapper"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="55dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">
        <ImageView
            android:id="@+id/imageArtist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_placeholder"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtArtistInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/artist_personal_info"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/txtArtistName"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/txtArtistName"
        app:layout_constraintTop_toBottomOf="@+id/txtArtistName" />

    <TextView
        android:id="@+id/txtArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name_placeholder"
        android:textSize="34sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageArtistWrapper"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/imageArtistWrapper"
        app:layout_constraintTop_toBottomOf="@+id/imageArtistWrapper"
        app:layout_constraintVertical_bias="0.033" />

    <ImageView
        android:id="@+id/btnLikeArtist"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/ic_favourite_unfilled"
        app:layout_constraintBottom_toBottomOf="@+id/btnBackArtist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBackArtist"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistItemRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArtistInfo"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/btnBackArtist"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

</androidx.constraintlayout.widget.ConstraintLayout>