<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.home.item.SongFragment">

    <TextView
        android:id="@+id/txtArtistSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name_placeholder"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageSongWrapper"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="55dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287">
        <ImageView
            android:id="@+id/imageSong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_placeholder"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title_placeholder"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageSongWrapper"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/imageSongWrapper"
        app:layout_constraintTop_toBottomOf="@+id/imageSongWrapper"
        app:layout_constraintVertical_bias="0.048" />

    <ImageView
        android:id="@+id/btnLikeSong"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/ic_favourite_unfilled"
        app:layout_constraintBottom_toBottomOf="@+id/btnBackSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBackSong"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnBackSong"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/txtFullSongLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/full_length_placeholder"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/songSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArtistSong"
        app:layout_constraintVertical_bias="0.988" />

    <SeekBar
        android:id="@+id/songSeekBar"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPlaySong"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageSongWrapper"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/imageSongWrapper"
        app:layout_constraintTop_toBottomOf="@+id/txtArtistSong"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/btnPlaySong"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songSeekBar"
        app:layout_constraintVertical_bias="0.168" />

    <ImageView
        android:id="@+id/btnSeekStart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlaySong"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songSeekBar"
        app:layout_constraintVertical_bias="0.281" />

    <ImageView
        android:id="@+id/btnSeekEnd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image_placeholder"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnPlaySong"
        app:layout_constraintTop_toBottomOf="@+id/songSeekBar"
        app:layout_constraintVertical_bias="0.281" />

</androidx.constraintlayout.widget.ConstraintLayout>